[package]
name = "blash"
version = "0.1.2"
edition = "2018"

[dependencies]
probe-rs = { git = "https://github.com/probe-rs/probe-rs/", package="probe-rs", features = ["ftdi"], rev="cc8d713eb3bcaf2b3da887c8292b60a317be922d" }
probe-rs-rtt = { git = "https://github.com/probe-rs/probe-rs/",  rev="cc8d713eb3bcaf2b3da887c8292b60a317be922d" }
xmas-elf = "0.8.0"
main_error = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
thiserror = "1.0.22"
indicatif = "0.16.0"
log = "0.4.11"
env_logger = "0.9.0"
byteorder = "1.3.4"
sha2 = "0.9.2"
structopt = { version = "0.3.21", features = ["paw"] }
paw = "1.0.0"
crc = "2.0.0"
hex = "0.4.2"
parse_int = "0.6.0"
funty="=1.2.0"
bitvec = "0.22.3"
deku = "0.12.3"
clap = "2.33.3"
ctrlc = "3.1.9"
serialport = "4.0.1"
goblin = "0.4.3"
